[package]
name = "sv2-template-viewer"
version = "0.1.0"
edition = "2024"
authors = ["Jorge Alonso <oieieio@protonmail.com>"]
description = "A Rust client to connect to an SV2 Template Provider and print job templates"
license = "MIT"
repository = "https://github.com/OIEIEIO/sv2-template-viewer"

[dependencies]
# Async runtime & ecosystem
tokio = { version = "1.38", features = ["full"] }
futures = "0.3.30"
bytes = "1.6"
async-channel = "2.3"

# SV2 Protocol libraries
roles_logic_sv2 = { git = "https://github.com/stratum-mining/stratum", branch = "main" }
codec_sv2       = { git = "https://github.com/stratum-mining/stratum", branch = "main" }
binary_sv2      = { git = "https://github.com/stratum-mining/stratum", branch = "main" }
framing_sv2     = { git = "https://github.com/stratum-mining/stratum", branch = "main" }
noise_sv2       = { git = "https://github.com/stratum-mining/stratum", branch = "main" }

# SV2 Helper libraries - ADD THESE
network_helpers_sv2 = { path = "../stratum/roles/roles-utils/network-helpers" }
key-utils = { path = "../stratum/utils/key-utils" }

# Logging and tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }

# Encoding & decoding
serde = { version = "1.0.203", features = ["derive"] }
bincode = "1.3.3"
bs58 = "0.4"
hex = "0.4.3"

# Cryptographic protocols
snow = "0.9.2"

# CLI and error handling
colored = "2.1"
anyhow = "1.0.98"
secp256k1 = "0.31.1"
